# Fine_tuning_1

./: .gitignore  DRL.json  Modelfile  README.md  dataquality.py  generated_prompt.py  main.py  merge.py  preprocessing.py  pyproject.toml  qualityresults.json  syntheticdatageneration.py  train.py
data/: instruction.json  insturctionquality.json
