[project]
name = "finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "docling>=2.63.0",
    "litellm>=1.80.7",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]


# Configure the PyTorch index for CUDA 12.4 (Adjust if you need 11.8 or 12.6)
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
